flapivor/tests/m3/hopix/typechecker/good/30-anonymous-third-order.hopix
val fix0 : forall a, b. ((a -> b) -> (a -> b)) * a * b -> b =
    ((fun (f, a, b) => (f (((fun (x) => b) : a -> b))) (a))
     : ((a -> b) -> (a -> b)) * a * b -> b)