flapivor/tests/m3/hopix/typechecker/bad/22-invalid-function-call-08.hopix
def f : forall a. a -> a (x) = f<Int> (x)